# neveredit

./: .gitignore  README.md  aurora_parity_plan.md  pytest.ini  run-mac.sh  setup-neveredit.sh
neveredit/: AUTHORS  LinearAlgebra.py  MANIFEST.in  Makefile  Numeric.py  README.md  __init__.py  makebundle.py  pytest.ini  setup.cfg  setup.py
neveredit/bio_erf/: erf.py
neveredit/doxygen/: pythfilter.py
neveredit/file/: BIFFile.py  BinaryDataHandler.py  CExoLocString.py  ERFFile.py  GFFFile.py  KeyFile.py  MDLFile.py  NeverFile.py  SoundSetFile.py  TalkTableFile.py  TileSetFile.py  TwoDAFile.py
neveredit/game/: Area.py  ChangeNotification.py  Conversation.py  Creature.py  Door.py  Encounter.py  Item.py  Module.py  NeverData.py  Palette.py  Placeable.py  ResourceManager.py  Script.py  SituatedObject.py  Sound.py  Store.py  Tile.py  Trigger.py  WayPoint.py
neveredit/numarray/: __init__.py
neveredit/openglcontext/: quaternion.py  utilities.py  vectorutilities.py
neveredit/render/: __init__.py  ecs.py
neveredit/run/: nevercommand  neveredit  nevererf  neversay  neverscript  runmodule
neveredit/tests/: conftest.py  test_creature_models.py  test_numpy_backend.py  test_render_preferences.py
neveredit/ui/: AreaWizard.py  ConversationWindow.py  FactionGridWindow.py  GLWindow.py  HAKListControl.py  HelpViewer.py  MapLayersWindow.py  MapWindow.py  ModelWindow.py  NeverEditMainApp.py  Notebook.py  PreferencesDialog.py  PropWindow.py  PropertiesDialogs.py  ScriptEditor.py  ShaderManager.py  ShaderWindow.py  SoundControl.py  TilingWindow.py  ToolPalette.py  WxUtils.py  (+1 more)
(+36 files in other folders)
