[metadata]
name = neveredit
version = 0.9.1a0
description = The neveredit NWN Module Editor
long_description = file: README.md
long_description_content_type = text/markdown
author = Sumpfork
author_email = sumpfork@users.sourceforge.net
url = http://neveredit.sourceforge.net
download_url = http://prdownloads.sourceforge.net/neveredit/neveredit-0.9.1a0.tar.gz?download
license = BSD-like, but subject to Bioware's NWN License Agreement
license_files = COPYING
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Games/Entertainment :: Role-Playing

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.11
package_dir =
    neveredit = .
packages =
    neveredit
    neveredit.openglcontext
    neveredit.render
    neveredit.util
    neveredit.file
    neveredit.game
    neveredit.ui
    neveredit.resources
    neveredit.resources.images
    neveredit.resources.xrc
scripts =
    run/neveredit
    run/neverscript
    run/nevercommand
    run/nevererf

[options.extras_require]
test =
    pytest
    ruff
    moderngl
    glcontext

[bdist_wheel]
universal = 0